@@ -1,3 +1,5 @@
+* Dialer (ECCP): fix bug in which an agent that has just been called Hangup on
+  would show as offline instead of online in getagentstatus request.
 * Dialer (ECCP): implement new events "pausestart" and "pauseend"
 * Dialer (ECCP): fix incorrect parameter verification in "getcallinfo" request
 * Dialer (ECCP): implement "getqueuescript" request
